4 files modified, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<p>Last Day: 30.09.2023</p>
+<p>Long Term hours: {{hoursLongTermInitial}}</p>
+<p>Last Day calculated: {{lastDayCalculated}}</p>
