--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <p>Last Day: 30.09.2023</p>
+<p>Vacation days: {{daysVacation}}</p>
 <p>Long Term hours: {{hoursLongTermInitial}}</p>
 <p>Last Day calculated: {{lastDayCalculated}}</p>
