--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <p>Vacation days: {{daysVacation}}</p>
 <p>Long Term hours: {{hoursLongTermInitial}}</p>
 <p>Last Day calculated: {{lastDayCalculated}}</p>
+<p>Days remaining: {{daysRemaining}}</p>
