--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<p>Today: {{now}}</p>
 <p>Last Day: {{lastDayContract}}</p>
 <p>Vacation days: {{daysVacation}}</p>
 <p>Long Term hours: {{hoursLongTermInitial}}</p>
