--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<p>Today: {{now}}</p>
+<p>Today: {{today}}</p>
 <p>Last Day: {{lastDayContract}}</p>
-<p>Vacation days: {{daysVacation}}</p>
+<p>Vacation days 2023: {{daysVacation}}</p>
 <p>Long Term hours: {{hoursLongTermInitial}}</p>
 <p>Last Day calculated: {{lastDayCalculated}}</p>
 <p>Days remaining: {{daysRemaining}}</p>
