--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,34 @@
 p {
-  font-family: Lato;
+  font-family: Arial;
+}
+
+input {
+  padding: 5px;
+  margin-left: 10px;
+  font-size: 100%;
+  width: 100px;
+  border-radius: 5px;
+}
+
+button {
+  color: #fff !important;
+  font-size: 100%;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ed3330;
+  padding: 10px;
+  border-radius: 5px;
+  display: inline-block;
+  border: none;
+  transition: all 0.4s ease 0s;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #434343;
+  letter-spacing: 1px;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.4s ease 0s;
 }
