--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <p>Today: {{today}}</p>
 <p>Last Day: {{lastDayContract}}</p>
-<p>Vacation days 2023: {{daysVacation}}</p>
-<p>Long Term hours: {{hoursLongTermInitial}}</p>
 <p>Last Day calculated: {{lastDayCalculated}}</p>
 <p>Days remaining: {{daysRemaining}}</p>
+<br>
+<p>Long Term hours:
+  <input type='number' [(ngModel)]="hoursLongTermInitial" (ngModelChange)="onModelChange()"/>
+</p>
+<p>Vacation days before 2023:
+  <input type='number' [(ngModel)]="daysVacationBefore2023" (ngModelChange)="onModelChange()"/>
+</p>
+<p>Vacation days 2023:
+  <input type='number' [(ngModel)]="daysVacation2023" (ngModelChange)="onModelChange()"/>
+</p>
+<br>
+<button (click)="onReset()">Reset</button>
