--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,14 @@
+:host {
+  display: grid;
+  grid-template-columns: 200px auto;
+}
+
 p {
   font-family: Arial;
 }
 
 input {
+  grid-column: 2;
   padding: 5px;
   margin-left: 10px;
   font-size: 100%;
@@ -11,6 +17,7 @@ input {
 }
 
 button {
+  grid-column: 1;
   color: #fff !important;
   font-size: 100%;
   text-transform: uppercase;
