--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,26 +1,58 @@
 :host {
   font-family: Arial;
-  display: grid;
-  grid-template-columns: 200px 100px;
-  grid-template-rows: repeat(4, 25px) repeat(4, 30px);
+  display :grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
   grid-row-gap: 10px;
   grid-column-gap: 20px;
   align-items: center;
-  justify-items: center;
-
+  justify-items: start;
 }
 
+h1 {
+  margin: 0;
+  margin-top: 10px;
+  margin-left: 10px;
+  font-size: 24px;
+  color: #444444;
+  text-shadow: 0 0 4px #00ff00;
+}
+
+div {
+  margin: 10px;
+  padding: 10px;
+  display: grid;
+  grid-column-gap: 20px;
+  align-items: center;
+  justify-items: center;
+  background-color: #dddddd;
+  border: 1px solid rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.top {
+  grid-template-columns: 200px 100px;
+  grid-template-rows: repeat(4, 25px);
+  grid-row-gap: 5px;
+}
+
+.bottom {
+  grid-template-columns: 200px 100px;
+  grid-template-rows: repeat(4, 30px);
+  grid-row-gap: 10px;
+}
 
 p {
   grid-column: 2;
   justify-self: start;
-
+  font-weight: bold;
+  color: #444444;
 }
 
 label {
   grid-column: 1;
   justify-self: end;
-
+  color: #444444;
 }
 
 input {
