--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,20 @@
-<label>Today:</label><p>{{today}}</p>
-<label>Last Day:</label><p>{{lastDayContract}}</p>
-<label>Last Day calculated:</label><p>{{lastDayCalculated}}</p>
-<label>Days remaining:</label><p>{{daysRemaining}}</p>
+<h1>Last Day Calculator</h1>
+<div class="top">
+  <label>Today:</label><p>{{today}}</p>
+  <label>Last Day:</label><p>{{lastDayContract}}</p>
+  <label>Last Day calculated:</label><p>{{lastDayCalculated}}</p>
+  <label>Days remaining:</label><p>{{daysRemaining}}</p>
+</div>
 
-<label>Long Term hours:</label>
-  <input type='number' [(ngModel)]="hoursLongTermInitial" (ngModelChange)="onModelChange()"/>
+<div class="bottom">
+  <label>Long Term hours:</label>
+    <input type='number' [(ngModel)]="hoursLongTermInitial" (ngModelChange)="onModelChange()"/>
 
-<label>Vacation days before 2023:</label>
-  <input type='number' [(ngModel)]="daysVacationBefore2023" (ngModelChange)="onModelChange()"/>
+  <label>Vacation days before 2023:</label>
+    <input type='number' [(ngModel)]="daysVacationBefore2023" (ngModelChange)="onModelChange()"/>
 
-<label>Vacation days 2023:</label>
-  <input type='number' [(ngModel)]="daysVacation2023" (ngModelChange)="onModelChange()"/>
+  <label>Vacation days 2023:</label>
+    <input type='number' [(ngModel)]="daysVacation2023" (ngModelChange)="onModelChange()"/>
 
-<button (click)="onReset()">Reset</button>
+  <button (click)="onReset()">Reset</button>
+</div>
