--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,7 +38,7 @@ div {
 
 .bottom {
   grid-template-columns: 200px 100px;
-  grid-template-rows: repeat(4, 30px);
+  grid-template-rows: repeat(4, auto);
   grid-row-gap: 10px;
 }
 
