--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1>Last Day Calculator</h1>
 <div class="top">
   <label>Today:</label><p>{{today}}</p>
-  <label>Last Day:</label><p>{{lastDayContract}}</p>
+  <label>Last Day Contract:</label><p>{{lastDayContract}}</p>
   <label>Last Day calculated:</label><p>{{lastDayCalculated}}</p>
-  <label>Days remaining:</label><p>{{daysRemaining}}</p>
+  <label>Working Days remaining:</label><p>{{daysRemaining}}</p>
 </div>
 
 <div class="bottom">
