--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 :host {
   font-family: Arial;
+  font-size: 14px;
   display :grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto auto;
@@ -31,13 +32,13 @@ div {
 }
 
 .top {
-  grid-template-columns: 200px 100px;
+  grid-template-columns: 180px 80px;
   grid-template-rows: repeat(4, 25px);
   grid-row-gap: 5px;
 }
 
 .bottom {
-  grid-template-columns: 200px 100px;
+  grid-template-columns: 180px 80px;
   grid-template-rows: repeat(4, auto);
   grid-row-gap: 10px;
 }
@@ -59,7 +60,7 @@ input {
   grid-column: 2;
   padding: 4px;
   font-size: 100%;
-  width: 100px;
+  width: 70px;
   border-radius: 5px;
 }
 
