--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div class="top">
   <label>Today:</label><p>{{today}}</p>
   <label>Last Day Contract:</label><p>{{lastDayContract}}</p>
-  <label>Last Day calculated:</label><p>{{lastDayCalculated}}</p>
-  <label>Working Days remaining:</label><p>{{daysRemaining}}</p>
+  <label>Last Day calculated:</label><p class="happy">{{lastDayCalculated}}</p>
+  <label>Working Days remaining:</label><p class="happy">{{daysRemaining}}</p>
 </div>
 
 <div class="bottom">
