--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,7 +14,7 @@ h1 {
   margin: 0;
   margin-top: 10px;
   margin-left: 10px;
-  font-size: 24px;
+  font-size: 28px;
   color: #444444;
   text-shadow: 0 0 4px #00ff00;
 }
@@ -48,6 +48,11 @@ p {
   justify-self: start;
   font-weight: bold;
   color: #444444;
+}
+
+.happy {
+  color: #444444;
+  text-shadow: 0 0 2px #00ff00;
 }
 
 label {
