--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,13 @@
 :host {
   font-family: Roboto;
-  font-size: 14px;
+  font-size: 13px;
   display :grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto auto;
   grid-row-gap: 10px;
-  grid-column-gap: 20px;
+  grid-column-gap: 15px;
   align-items: center;
-  justify-items: start;
+  justify-items: stretch;
 }
 
 h1 {
@@ -23,7 +23,8 @@ div {
   margin: 10px;
   padding: 10px;
   display: grid;
-  grid-column-gap: 20px;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
   align-items: center;
   justify-items: center;
   background-color: #dddddd;
@@ -32,15 +33,13 @@ div {
 }
 
 .top {
-  grid-template-columns: 180px 80px;
-  grid-template-rows: repeat(4, 25px);
-  grid-row-gap: 5px;
+  grid-template-columns: auto auto;
+  grid-template-rows: repeat(4, 1em);
 }
 
 .bottom {
-  grid-template-columns: 180px 80px;
+  grid-template-columns: auto suto;
   grid-template-rows: repeat(4, auto);
-  grid-row-gap: 10px;
 }
 
 p {
