--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,42 @@
 <h1>Last Day Calculator</h1>
 <div class="top">
-	<label>Today:</label>
-	<p>{{today}}</p>
-	<label>Last Day Contract:</label>
-	<p>{{lastDayContract}}</p>
-	<label>Last Day calculated:</label>
-	<p class="happy">{{lastDayCalculated}}</p>
-	<label>Working Days remaining:</label>
-	<p class="happy">{{daysRemaining}}</p>
+  <label>Today:</label>
+  <p>{{ today }}</p>
+  <label>Last Day Contract:</label>
+  <p>{{ lastDayContract }}</p>
+  <label>Last Day calculated:</label>
+  <p class="happy">{{ lastDayCalculated }}</p>
+  <label>Working Days remaining:</label>
+  <p class="happy">{{ daysRemaining }}</p>
 </div>
 
 <div class="bottom">
-	<label>Long Term hours:</label>
-	<input type='number' [(ngModel)]="hoursLongTermInitial" (ngModelChange)="onModelChange()"/>
+  <label>Short Term hours:</label>
+  <input
+    type="number"
+    [(ngModel)]="hoursShortTermInitial"
+    (ngModelChange)="onModelChange()"
+  />
+  <label>Long Term hours:</label>
+  <input
+    type="number"
+    [(ngModel)]="hoursLongTermInitial"
+    (ngModelChange)="onModelChange()"
+  />
 
-	<label>Vacation days before 2023:</label>
-	<input type='number' [(ngModel)]="daysVacationBefore2023" (ngModelChange)="onModelChange()"/>
+  <label>Vacation days before 2023:</label>
+  <input
+    type="number"
+    [(ngModel)]="daysVacationBefore2023"
+    (ngModelChange)="onModelChange()"
+  />
 
-	<label>Vacation days 2023:</label>
-	<input type='number' [(ngModel)]="daysVacation2023" (ngModelChange)="onModelChange()"/>
+  <label>Vacation days 2023:</label>
+  <input
+    type="number"
+    [(ngModel)]="daysVacation2023"
+    (ngModelChange)="onModelChange()"
+  />
 
-	<button (click)="onReset()">Reset</button>
+  <button (click)="onReset()">Reset</button>
 </div>
