--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
   <p class="happy">{{ lastDayCalculated }}</p>
   <label>Working Days remaining:</label>
   <p class="happy">{{ daysRemaining }}</p>
+  <label>Working hours las day:</label>
+  <p class="happy">{{ lastDayWorkingHours }}</p>
 </div>
 
 <div class="bottom">
