--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <p class="happy">{{ lastDayCalculated }}</p>
   <label>Working Days remaining:</label>
   <p class="happy">{{ daysRemaining }}</p>
-  <label>Working hours las day:</label>
+  <label>Working hours last day:</label>
   <p class="happy">{{ lastDayWorkingHours }}</p>
 </div>
 
